# immersive.labs

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vercel.json
.github/workflows/: publish-immersive-studio.yml  publish-studio-desktop.yml  publish-testpypi.yml  schema-sync-check.yml  studio-api-uptime.yml  studio-worker-blender.yml  studio-worker-gpu-comfy.yml  studio-worker.yml
apps/: README.md
apps/studio-desktop/: README.md  index.html  package.json
apps/studio-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio-desktop/src-tauri/capabilities/: default.json  updater-all.json
apps/studio-desktop/src-tauri/icons/: icon.icns
apps/studio-desktop/src-tauri/resources/: comfy_silent_launcher.py  setup-desktop-studio.ps1
apps/studio-desktop/src-tauri/src/: app_state.rs  lib.rs  main.rs
apps/studio-edge/: README.md  package.json  tsconfig.json  wrangler.toml
apps/studio-worker/: .env.example  .env.scale.example  .gitignore  Dockerfile  README.md  docker-compose.scale.yml  docker-compose.yml  pyproject.toml
apps/studio-worker/blender/: export_mesh.py
apps/studio-worker/comfy/: README.md
apps/studio-worker/scripts/: immersive-studio.cmd  immersive-studio.sh  start-comfyui-dev.ps1  start-comfyui-dev.sh
apps/studio-worker/src/immersive_studio/: __init__.py
apps/studio-worker/src/studio_worker/: __init__.py  __main__.py  api.py  attribution.py  billing_config.py  billing_routes.py  cli.py  comfy_client.py  http_context.py  job_artifacts.py  job_runner.py  jobs_store.py  json_extract.py  manifest.py  mesh_export.py  mock_spec.py  moderation.py  ollama_client.py  pack_writer.py  paths.py  pbr_keys.py  prompts.py  queue_executor.py  queue_postgres.py  queue_redis.py  queue_redis_streams.py  queue_sqlite.py  queue_sqs_postgres.py  quotas.py  rate_limit.py  scale_config.py  spec_generate.py  sqlite_queue.py  stripe_billing.py  studio_dashboard.py  subprocess_win.py  tenant_context.py  tenants_db.py  tenants_postgres.py  tenants_sqlite.py  (+5 more)
apps/studio-worker/src/studio_worker/blender/: export_mesh.py
apps/studio-worker/src/studio_worker/comfy_workflows/: sd15_albedo_v1.api.json  sdxl_albedo_v1.api.json
apps/studio-worker/src/studio_worker/mesh_pipeline/: __init__.py  config.py  runner.py  tripo_errors.py
apps/studio-worker/src/studio_worker/mesh_pipeline/providers/: __init__.py  base.py  blender_placeholder.py  tripo.py
apps/studio-worker/tests/: conftest.py  test_comfy_client_mock.py  test_doctor_dns_hint.py  test_gpu_comfy_placeholder.py  test_immersive_studio_sdk.py  test_json_extract.py  test_mesh_export.py  test_mesh_pipeline.py  test_mesh_pipeline_fallback.py  test_moderation.py  test_ollama_client.py  test_pack_engine_target.py  test_pbr_keys.py  test_queue_api_idempotency.py  test_queue_job_sse.py  test_queue_redis.py  test_queue_redis_streams.py  test_sqlite_queue.py  test_stripe_billing.py  test_subprocess_win.py  test_tenant_auth.py  test_texture_pipeline.py  test_validate.py  test_zip_pack.py
apps/web/: .env.desktop  .env.development.local.example  .env.example  index.html  package.json  vite.config.ts
docs/studio/: DECISIONS.md  README.md  api-keys-and-local-stack.md  architecture.md  art-style-presets.md  cloudflare-edge-and-storage.md  deploy-gcp-free-vm.md  deploy-recent-changes.md  essentials.md  fab-export-checklist.md  hardening.md  json-schema-spec.md  releasing.md  (+10 more)
scripts/: _restart-studio-8787.ps1  ensure-immersive-studio-on-path.ps1  package-fab-product-zips.ps1  studio-load-smoke.sh  sync-fab-plugin-zips-to-web.ps1  sync-studio-asset-schema.py  vercel-deploy-prod.mjs
src/: App.css  App.tsx  index.css
(+107 files in other folders)
