[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "immersive-studio"
version = "0.1.9"
description = "Immersive Studio CLI and SDK: spec generation, ComfyUI textures, Unity packs, and HTTP worker API."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli", "game-dev", "unity", "comfyui", "3d", "procedural"]
authors = [{ name = "Immersive Labs" }]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "jsonschema>=4.21",
  "stripe>=10.0",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21.0",
  "fakeredis>=2.23",
]
postgres = [
  "psycopg[binary]>=3.2",
]
redis = [
  "redis>=5.0",
]
s3 = [
  "boto3>=1.34",
]
scale = [
  "psycopg[binary]>=3.2",
  "boto3>=1.34",
  "redis>=5.0",
]

[project.scripts]
immersive-studio = "studio_worker.cli:main"

[project.urls]
Homepage = "https://github.com/immersive-labs/immersive.labs"
Documentation = "https://github.com/immersive-labs/immersive.labs/tree/main/apps/studio-worker"
Repository = "https://github.com/immersive-labs/immersive.labs"
Issues = "https://github.com/immersive-labs/immersive.labs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
studio_worker = [
  "data/*.json",
  "comfy_workflows/*.json",
  "blender/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "gpu_comfy: requires live ComfyUI (STUDIO_RUN_GPU_COMFY_TESTS=1)",
]
